# cybersquad

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: ARCHITECTURE.md  EXAMPLES.md  INSTALL.md  OPENCLAW-OPENCTI-JOBS.example.json  OPENCLAW-SCHEDULING.md  OPENCTI-OPENCLAW-RALPH.md  OPENSQUAD-INSIGHTS.md  USAGE.md
opencti/: .env.example  docker-compose.yml
outputs/: morning-call-2026-03-28-squad.md
prompts/: README.md  incident.md  opencti-daily-brief.md  opencti-financial-hunting-review.md  opencti-hunting-detection-translation.md  persona-prompts.generated.md  persona-prompts.md  security-architecture-review.md  study-attack-perspectives.md  study-learning-path.md
prompts/personas/: aegis_ir-aegis-ir.md  atlas_soc-atlas-soc.md  forge_detection-forge-detection.md  gauge_detqa-gauge-detqa.md  ghost_offensive-ghost-offensive.md  hex_malware-hex-malware.md  ledger_grc-ledger-grc.md  nimbus_cloudsec-nimbus-cloudsec.md  nova_appsec-nova-appsec.md  orion_cti-orion-cti.md  patch_vulnops-patch-vulnops.md  pulse_fraud-pulse-fraud.md  raven_hunter-raven-hunter.md  sentinel_seceng-sentinel-seceng.md
scripts/: bootstrap-workspace.ps1  bootstrap-workspace.sh  generate-usage-prompts.ps1  generate-usage-prompts.sh  rebuild-prompts.ps1  rebuild-prompts.sh  sync-template.ps1  sync-template.sh
src/cybersquad/: __init__.py  cli.py  loops.py  maint.py  personas.py  promptgen.py  workspace.py
src/cybersquad/template/: personas.yaml
src/cybersquad/template/.agents/ralph/: PROMPT_build.md  README.md  config.sh
src/cybersquad/template/.agents/tasks/: prd.json
src/cybersquad/template/_cybersquad/: config.yaml
src/cybersquad/template/_cybersquad/_memory/: preferences.md
src/cybersquad/template/opencti/: README.md
src/cybersquad/template/prompts/: README.md  appsec-review.md  cloud-misconfig-review.md  compliance-control-mapping.md  detection-validation.md  fraud-triage.md  master-prompt.md  opencti-financial-hunting-review.md  opencti-kev-prioritization.md  persona-skill-upgrades.md  threat-hunting.md  triage.md  vuln-prioritization.md
