[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersquad"
version = "0.1.0"
description = "Prompt-driven virtual cybersecurity squad with installable workspace templates"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "CyberSquad Contributors" }
]
keywords = ["cybersecurity", "ai", "prompts", "soc", "incident-response"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/your-org/cybersquad"
Issues = "https://github.com/your-org/cybersquad/issues"

[project.scripts]
cybersquad = "cybersquad.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cybersquad = ["template/**"]
